# gba-emu

./: .gitignore  Cargo.toml
gba-core/: .gitignore  Cargo.toml  README.md
gba-core/src/: gba.rs  lib.rs  main.rs
gba-core/src/bus/: display_map.rs  io_map.rs  mod.rs
gba-core/src/cpu/: instrs.rs  mod.rs  regs.rs
gba-core/src/cpu/instrs/: arm.rs  thumb.rs
gba-core/src/cpu/instrs/arm/: block_data_transfer.rs  branch.rs  branch_and_exchange.rs  data_processing.rs  halfword_transfer.rs  multiply.rs  psr_transfer.rs  single_data_swap.rs  single_data_transfer.rs  swi.rs
gba-core/src/cpu/instrs/thumb/: add_offset_to_stack_pointer.rs  add_subtract.rs  alu_operations.rs  branch.rs  high_reg_ops_or_bx.rs  invalid.rs  load_address.rs  load_store_halfword.rs  load_store_immediate_offset.rs  load_store_register_offset.rs  load_store_sign_extended.rs  mov_cmp_add_sub_immediate.rs  move_shifted_register.rs  multiple_load_store.rs  pc_relative_load.rs  push_pop_regs.rs  sp_relative_ls.rs  swi.rs
gba-core/src/gba/: debug.rs  wasm.rs
gba-core/src/ppu/: debug.rs  dispstat.rs  lcd_regs.rs  masked_byte.rs  mod.rs  tiles.rs  utils.rs
gba-core/src/utils/: addressable_bits.rs  js.rs  mod.rs
gba-core/tests/: arm_tests.rs
gba-core/tests/roms/: irqDemo.gba:Zone.Identifier  irqDemo_2.gba
gba-plastic/: package-lock.json  package.json  vite.config.ts
gba-plastic-react/: package-lock.json  package.json
gba-plastic-react/src/: App.tsx  Gba.tsx  MemoryView.tsx  Pc.tsx  useAnimationFrame.ts
gba-plastic-react/src/debug/: Ppu.tsx
gba-plastic-react/src/debug/Debugger/: Debugger.tsx  Instructions.tsx
gba-plastic/src/: App.tsx  Gba.tsx  MemoryView.tsx  Pc.tsx  main.tsx
gba-plastic/src/debugger/: Ppu.tsx
gba-web/: Cargo.toml
gba-web/.cargo/: config.toml
gba-web/src/: control.rs  cpu_debug.rs  gba.rs  lib.rs  thread.rs  to_js_result.rs
plastic/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
plastic/src/: hooks.server.ts
plastic/src/components/: Debugger.svelte  EmuInfo.svelte  GbaTicker.svelte  Keyhandler.svelte  PpuDebugger.svelte  Psr.svelte  RegInfo.svelte  Screen.svelte  Tilemap.svelte  Toolbar.svelte
plastic/src/components/Debugger/: Debugger.svelte  Line.svelte
plastic/src/components/PpuDebugger/: BackgroundsCanvas.svelte  PalettesCanvas.svelte  PpuDebugger.svelte  TilesCanvas.svelte
plastic/src/lib/: debugger.ts  debuggerStore.ts  frameTimeStore.ts  gbaStore.ts  keys.ts
plastic/src/lib/pkg/debug/: gba_core.d.ts  gba_core.js  gba_core_bg.wasm  gba_core_bg.wasm.d.ts  gba_web.d.ts  gba_web.js  gba_web_bg.wasm  gba_web_bg.wasm.d.ts  package.json
plastic/src/routes/: +page.svelte
src/: lib.rs  main.rs
src/bus/: io_map.rs  mod.rs
src/cpu/: instrs.rs  mod.rs  thumb.rs
src/cpu/instrs/: arm.rs  block_data_transfer.rs  branch.rs  branch_and_exchange.rs  data_processing.rs  halfword_transfer.rs  halfword_transfer_immediate.rs  psr_transfer.rs
src/cpu/instrs/arm/: branch.rs  halfword_transfer.rs
src/utils/: addressable_bits.rs  logging.rs  mod.rs
tests/: arm_tests.rs
