[package]
name = "gba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
num-traits = "0.2.16"
pretty_env_logger = "0.5.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
env_logger = "*"
test-log = "0.2.12"
