[package]
name = "gba-core"
version = "0.1.0"
edition = "2021"

[lib]
# "cdylib"
# A dynamic system library will be produced. This is used when compiling a 
# dynamic library to be loaded from another language. This output type will 
# create *.so files on Linux, *.dylib files on macOS, and *.dll files on 
# Windows.
crate-type = ["lib", "cdylib"]

[dependencies]
log = "0.4.19"
num-traits = "0.2.16"
pretty_env_logger = "0.5.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wasm-bindgen = { version = "0.2.87", optional = true }
js-sys = { version = "0.3.64", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.64", optional = true, features = [
    "console", 
    "CanvasRenderingContext2d", 
    "ImageBitmap", 
    "ImageData", 
    "HtmlCanvasElement",
    "Window",
    "Worker",
    "Document",
    "HtmlInputElement",
    "MessageEvent",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"

[dev-dependencies]
env_logger = "*"
test-log = "0.2.12"

[profile.release]
lto = true
#codegen-units = 1

[features]
default = ["gui"]
debugger = []
gui = ["dep:js-sys", "dep:wasm-bindgen", "dep:console_error_panic_hook", "dep:web-sys"]

[[bin]]
name="gui"
path="src/gui/main.rs"
required-featuers=["gui"]
